1、增加日期偏移量的参数 2、修改首页和登录页面

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,9 +30,9 @@
         <div class="error"><span>+</span></div>
     </form>
     <div class="connect">
-        <p>power by @:</p>
+        <p>power by @2018 Aer</p>
         <p>
-            <a class="mangohua" href="http://www.mangohua.com" target="_blank"></a>
+            <a class="hover" href="http://www.mangohua.com" target="_blank"></a>
         </p>
     </div>
 </div>
