sql全部改成小写

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -171,7 +171,7 @@
     <span style="padding-left:10px; font-size: 16px; "><img src="images/blocks.gif" width="20" height="20" align="absmiddle" /> ETL系统</span>
 </div>
 <div region="south" split="true" style="height: 30px; background: #D2E0F2; ">
-    <div class="footer">By <a href="#" target="_blank">@2018 Aer</a></div>
+    <div class="footer">By@2018 Aer</div>
 </div>
 <div region="west" hide="true" split="true" title="导航菜单" style="width:180px;" id="west">
     <div id="nav" class="easyui-accordion" fit="true" border="false">
