--- a/src/main/resources/templates/monitor/inst_index.html
+++ b/src/main/resources/templates/monitor/inst_index.html
@@ -38,4 +38,12 @@
 <div id="dom_var_window"></div>
 </body>
 
+<div id="child_job_window">
+    <table id="childjobtt" class="easyui-treegrid"></table>
+</div>
+
+<div id="parent_job_window">
+    <table id="parentjobtt" class="easyui-treegrid"></table>
+</div>
+
 </html>
