所有作业新增运行ip地址，并启用分布式锁来实现多台机器运行调度作业

--- a/src/main/resources/templates/manager/add_job.html
+++ b/src/main/resources/templates/manager/add_job.html
@@ -45,6 +45,8 @@
                         <td colspan="3"><input id="tableName" name="tableName" data-options="required:true" style="width: 100%" /></td>
                         <td>作业类型：</td>
                         <td> <div id="jobType" /></td>
+                        <td>服务器：</td>
+                        <td><div id="hostName"/></td>
                     </tr>
 
                     <tr style="display: none" id="cleanTr">
