--- a/src/main/resources/templates/manager/ds_index.html
+++ b/src/main/resources/templates/manager/ds_index.html
@@ -87,6 +87,10 @@
                 <td><input id="cronDesc" class="txt01" name="cronDesc" value="00 00 7 * * *" data-options="required:true" /></td>
             </tr>
             <tr>
+                <td>服务器ip：</td>
+                <td><input id="hostName" class="txt01" name="hostName" data-options="required:true" /></td>
+            </tr>
+            <tr>
                 <td>是否有效：</td>
                 <td><input id="dsValid" class="txt01" name="dsValid" data-options="required:true" /></td>
             </tr>
