--- a/src/main/resources/templates/monitor/queue_index.html
+++ b/src/main/resources/templates/monitor/queue_index.html
@@ -32,6 +32,10 @@
                     <td>优先级：</td>
                     <td><input id="priorty" class="easyui-numberbox" name="jobQueue.priorty" data-options="required:true" /></td>
                 </tr>
+                <tr>
+                    <td>服务器ip：</td>
+                    <td><input id="hostName" class="easyui-combobox" name="jobQueue.hostName" data-options="required:true" /></td>
+                </tr>
             </table>
             </form>
         </div>
